# checkrd-sdk

./: .editorconfig  .gitignore  .lychee.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  (+2 more)
crates/core/: Cargo.toml
crates/core/src/: dsse_verify.rs  identity.rs  interface.rs  killswitch.rs  lib.rs  logger.rs  policy.rs  ratelimit.rs  util.rs
crates/core/tests/: rfc9421_b26_ed25519.rs  wycheproof_ed25519.rs
crates/shared/: Cargo.toml
crates/shared/src/: api_key_scope.rs  billing.rs  dsse.rs  error.rs  events.rs  http.rs  http_sig.rs  lib.rs  policy.rs  policy_bundle.rs  telemetry.rs  url.rs
wrappers/api-clients/python/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
wrappers/api-clients/python/examples/: async_demo.py  error_handling.py  list_agents.py
wrappers/api-clients/python/scripts/: generate.sh
wrappers/api-clients/python/src/checkrd_api/: __init__.py  _client.py  _exceptions.py  _pagination.py  types.py
wrappers/api-clients/python/src/checkrd_api/_generated/: __init__.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/agents/: create_agent.py  delete_agent.py  get_agent.py  list_agents.py  register_public_key.py  toggle_kill_switch.py  update_agent.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/alert_history/: list_alert_history.py  timeseries_alert_history.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/alerts/: create_alert.py  delete_alert.py  list_alerts.py  list_history.py  list_notifications.py  mute_alert.py  toggle_alert.py  unmute_alert.py  update_alert.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/audit/: list_audit_log.py  list_for_resource.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/auth/: callback.py  device_approve.py  device_code.py  device_deny.py  device_token.py  login.py  logout.py  me.py  refresh.py  switch_org.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/billing/: billing_status.py  create_checkout.py  create_portal.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/control/: control_stream.py  control_stream_for_dashboard.py  get_control_state.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/dashboard/: get_agent_stats.py  get_event_by_request_id.py  get_events.py  get_rule_hits.py  get_stats.py  get_timeseries.py  get_top_hosts.py
wrappers/api-clients/python/src/checkrd_api/_generated/api/health/: handler.py
wrappers/api-clients/python/src/checkrd_api/_generated/models/: __init__.py  agent.py  agent_stats.py  alert_history_bucket.py  alert_history_entry.py  alert_notification_entry.py  alert_rule.py  alert_rule_with_agent.py  alert_state_history_entry.py  analyze_finding.py  analyze_org_policy_request.py  analyze_org_policy_response.py  analyze_org_policy_response_findings_item.py  analyze_org_policy_response_summary.py  analyze_org_policy_response_warnings_item.py  analyze_policy_request.py  analyze_policy_response.py  api_key_summary.py  api_key_summary_permissions.py  audit_log_entry_with_user.py  audit_log_entry_with_user_details.py  auto_fix.py  billing_status.py  checkout_response.py  control_init.py  control_kill_switch_event.py  control_policy_updated_event.py  control_policy_updated_event_policy_envelope.py  control_state.py  control_state_policy_envelope.py  create_agent_request.py  create_alert_request.py  create_key_request.py  create_key_request_permissions.py  create_key_response.py  create_org_policy_request.py  create_org_policy_response.py  create_org_policy_response_analysis.py  create_org_request.py  create_policy_request.py  (+94 more)
wrappers/api-clients/python/src/checkrd_api/_resources/: __init__.py  agents.py
wrappers/api-clients/python/tests/: test_facade.py
wrappers/python/: API-STABILITY.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THREAT-MODEL.md  WASM-CORE.md  pyproject.toml
wrappers/python/docs/: air-gapped-deployment.md
wrappers/python/examples/: README.md  air_gapped.py  basic_openai.py  custom_identity_kms.py  langchain_transparent.py  otlp_datadog.py
wrappers/python/src/checkrd/: __init__.py  __main__.py  _async_batcher.py  _async_control.py  _circuit_breaker.py  _deprecation.py  _fork.py  _genai.py  _genai_body.py  _init_wizard.py  _logging.py  _pagination.py  _platform.py  _policy_bootstrap.py  _policy_state.py  _response.py  _retry.py  _settings.py  _state.py  _trust.py  _types.py  asgi.py  batcher.py  cli.py  client.py  config.py  control.py  engine.py  exceptions.py  hooks.py  identity.py  mcp.py  sinks.py  testing.py  watchers.py  webhooks.py  wsgi.py
wrappers/python/src/checkrd/integrations/: __init__.py  _anthropic.py  _base.py  _cohere.py  _google_genai.py  _groq.py  _mistralai.py  _openai.py  _together.py  claude_agent_sdk.py  langchain.py  mcp.py  openai_agents.py
wrappers/python/src/checkrd/transports/: _httpx.py
wrappers/python/tests/: conftest.py  test_asgi.py  test_async_batcher.py  test_async_control.py  test_backoff_jitter.py  test_batcher.py  test_batcher_evaluation_path.py  test_before_send.py  test_circuit_breaker.py  test_cli.py  test_client_class.py  test_config.py  test_control.py  test_debug.py  test_debug_pii_warning.py  test_engine.py  test_error_codes.py  test_examples.py  test_ffi_properties.py  test_fork.py  test_genai.py  test_genai_body.py  test_graceful_degradation.py  test_health.py  test_hooks.py  test_identity.py  test_init_wizard.py  test_isolation.py  test_mcp.py  test_otel_span_sink.py  test_otlp_sink.py  test_oversize_body.py  test_p0_fixes.py  test_p1_fixes.py  test_pagination.py  test_pk_registration.py  test_platform_headers.py  test_policy_bootstrap.py  test_policy_signing.py  test_policy_state.py  (+17 more)
wrappers/python/tests/e2e/: __init__.py  conftest.py  test_staging_canary.py
wrappers/python/tests/integrations/: __init__.py  conftest.py  test_anthropic.py  test_base.py  test_cohere.py  test_frameworks.py  test_google_genai.py  test_groq.py  test_mistralai.py  test_openai.py  test_together.py  test_toplevel.py
(+228 files in other folders)
