[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/checkrd-io/checkrd-sdk"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
checkrd-shared = { path = "crates/shared" }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize", "pkcs8"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.11"
base64 = "0.22"
typeshare = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
